Fix location block overflow

--- a/content/themes/dude/sass/views/_contact.scss
+++ b/content/themes/dude/sass/views/_contact.scss
@@ -414,6 +414,9 @@ body #page .site-content .block {
   &.block-location {
     background-color: #ccc;
     height: 50vh;
+    overflow: hidden;
+    display: block;
+    clear: both;
 
     .col-map {
       @include span(4/7);
